freest/test/prog/Invalid/Typing/ExpectsTooManyArgsFun2/ExpectsTooManyArgsFun2.fst
module ExpectsTooManyArgsFun2 where

foo : Int -> Int
foo x y = x